tests/macros/plugin/choices.rs
fn main() {
    discourse::questions![Plugin { choices: todo!() }];
}
